# SJ-QuestionQualityClaw

./: README.md
SJ-QuestionQualityClaw/: (Ruby) Authentication and Authorization Issues _ Incorrect Authorization (2)_exported.json  .env.example  .gitignore  README.md  WARP.md  docker-compose.yml  pyproject.toml
SJ-QuestionQualityClaw/config/: quality_baseline.py  review_criteria.py  settings.py
SJ-QuestionQualityClaw/docs/: FEEDBACK_LOOP.md  NEXT_STEPS.md
SJ-QuestionQualityClaw/migrations/: 001_initial_schema.sql
SJ-QuestionQualityClaw/questions/: (Go) Data Processing Issues _ Deserialization of Untrusted Data (10).json  (Go) Design and Configuration Flaws _ Path Traversal (8).json  (Go) Server-Side Request Forgery _ Server-Side Request Forgery (SSRF) (4).json  (JavaScript) Injection Flaws _ Improper Control of Generation of Code ('Code Injection') (1).json  (JavaScript) Software and Data Integrity Failures _ Deserialization of Untrusted Data (2).json  (JavaScript) Vulnerable and Outdated Components _ Legacy Cryptography Usage (7).json  (Python) Concurrency Issues _ Concurrent Execution using Shared Resource with Improper Synchronization ('Race Condition').json  (Python) Identification and Authentication Failures _ Weak Password Recovery Mechanism (4).json  (Ruby) Authentication and Authorization Issues _ Incorrect Authorization (2).json  (Rust) Authentication and Authorization Issues _ Improper Privilege Management.json  AI_LLM Core Security _ Retrieval Augmentation Generation (RAG) Implementation.json  AI_LLM Model Theft _ Model Watermarking (1).json  (+1 more)
(+49 files in other folders)
